# InnoTasks

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml  run.sh
.github/workflows/: metrics.yaml
app/: .flake8  Dockerfile  db.py  main.py  pyproject.toml
app/api/: authentication.py  notifications.py  tasks.py  users.py
app/models/: notification.py  task.py  user.py
app/services/: notification_service.py  task_service.py  user_service.py
app/test/: test_authentication.py  test_notifications.py  test_tasks.py
frontend/: Dockerfile  pubspec.yaml
frontend/lib/: main.dart  network.dart
frontend/lib/models/: notification.dart  notification.freezed.dart  notification.g.dart  task.dart  task.freezed.dart  task.g.dart  user.dart  user.freezed.dart  user.g.dart
frontend/lib/pages/: login.dart  register.dart  tasks.dart
frontend/macos/Runner.xcodeproj/: project.pbxproj
