[tool.poetry]
name = "innotasks"
version = "0.1.0"
description = "Task app"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.2"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pytest = "^8.1.1"
httpx = "^0.27.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.6.4"}
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
